tweak clean css styles undo "fix cut off top-right menu"

--- a/src/frontend/components/clean.css
+++ b/src/frontend/components/clean.css
@@ -38,3 +38,13 @@
 #uiBase.onMenu #spectButton {
   top: 94%;
 }
+
+.headerBarRight {
+  right: -23px;
+}
+
+.headerBarLeft,
+.headerBarRight,
+#menuItemContainer {
+  background-color: transparent !important;
+}
